fix for hidden infowindo close button on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -26,3 +26,8 @@ a:hover { color: #4B58A6; }
 .filter-red { background-color: #FB6353; }
 
 canvas {-ms-touch-action: double-tap-zoom;}
+
+/** FIX for Bootstrap and Google Maps Info window styes problem **/
+img[src*="gstatic.com/"], img[src*="googleapis.com/"] {
+max-width: none;
+}
